Adding prometheus ingress and updating config

--- a/helm/prometheus/charts/prometheus-pushgateway/values.yaml
+++ b/helm/prometheus/charts/prometheus-pushgateway/values.yaml
@@ -21,7 +21,7 @@ image:
 imagePullSecrets: []
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 9091
   targetPort: 9091
   # nodePort: 32100
