--- a/helm/opensearch/values.yaml
+++ b/helm/opensearch/values.yaml
@@ -102,13 +102,13 @@ config:
 # Extra environment variables to append to this nodeGroup
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
 # syntax here
-extraEnvs: []
+extraEnvs:
 #  - name: MY_ENVIRONMENT_VAR
 #    value: the_value_goes_here
 # Chart version 2.18.0 and App Version OpenSearch 2.12.0 onwards a custom strong password needs to be provided in order to setup demo admin user.
 # Cluster will not spin-up without this unless demo config install is disabled.
-#  - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
-#    value: <strong-password>
+ - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
+   value: 0wRebeMOVvfJElNF8uElhe
 
 # Allows you to load environment variables from kubernetes secret or config map
 envFrom: []
@@ -291,7 +291,7 @@ service:
   labelsHeadless: {}
   headless:
     annotations: {}
-  type: ClusterIP
+  type: LoadBalancer
   # The IP family and IP families options are to set the behaviour in a dual-stack environment
   # Omitting these values will let the service fall back to whatever the CNI dictates the defaults
   # should be
