--- a/services/platform/secrets/taras.yaml
+++ b/services/platform/secrets/taras.yaml
@@ -1,7 +1,7 @@
 # Image Pull service account to get image from your repo.
 apiVersion: v1
 data:
-  .dockercfg: aGVyZQ==
+  .dockercfg: base64=
 kind: Secret
 metadata:
   name: taras
