--- a/services/platform/web-blogs.yaml
+++ b/services/platform/web-blogs.yaml
@@ -23,7 +23,7 @@ spec:
         - name: taras
       containers:
       - name: web-blogs
-        image: steblynskyi/web-blogs:latest
+        image: steblynskyi/web-blogs:v0.1.1
         imagePullPolicy: Always
         # livenessProbe:
         #   failureThreshold: 3
@@ -43,7 +43,7 @@ spec:
             cpu: 250m
             memory: 256Mi
         ports:
-        - containerPort: 5001
+        - containerPort: 80
           name: http
         env:
         - name: GMAIL_SMTP_ADDRESS
@@ -69,9 +69,9 @@ spec:
     app: web-blogs
     env: test
   ports:
-  - port: 5001
+  - port: 8080
     name: tcp
-    targetPort: 5001
+    targetPort: 80
     protocol: TCP
   type: LoadBalancer
 ---
