--- a/helm/jenkins/values.yaml
+++ b/helm/jenkins/values.yaml
@@ -399,10 +399,10 @@ controller:
   # Plugins will be installed during Jenkins controller start
   # -- List of Jenkins plugins to install. If you don't want to install plugins, set it to `false`
   installPlugins:
-    - kubernetes:4302.va_756e4b_67715
-    - workflow-aggregator:600.vb_57cdd26fdd7
-    - git:5.6.0
-    - configuration-as-code:1903.v004d55388f30
+    - kubernetes:latest
+    - workflow-aggregator:latest
+    - git:latest
+    - configuration-as-code:latest
 
   # If set to false, Jenkins will download the minimum required version of all dependencies.
   # -- Download the minimum required version or latest version of all dependencies
