--- a/helm/jenkins/Chart.yaml
+++ b/helm/jenkins/Chart.yaml
@@ -1,14 +1,14 @@
 annotations:
   artifacthub.io/category: integration-delivery
   artifacthub.io/changes: |
-    - Update `docker.io/kiwigrid/k8s-sidecar` to version `1.28.1`
+    - Update `docker.io/kiwigrid/k8s-sidecar` to version `latest`
   artifacthub.io/images: |
     - name: jenkins
-      image: docker.io/jenkins/jenkins:2.479.2-jdk17
+      image: docker.io/jenkins/jenkins:latest
     - name: k8s-sidecar
-      image: docker.io/kiwigrid/k8s-sidecar:1.28.1
+      image: docker.io/kiwigrid/k8s-sidecar:latest
     - name: inbound-agent
-      image: jenkins/inbound-agent:3273.v4cfe589b_fd83-1
+      image: jenkins/inbound-agent:latest
   artifacthub.io/license: Apache-2.0
   artifacthub.io/links: |
     - name: Chart Source
