--- a/services/platform/secrets/postgresql.yaml
+++ b/services/platform/secrets/postgresql.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: platform
 type: Opaque
 data:
-  POSTGRES_PASSWORD: MTIzNAo=
-  POSTGRES_USER: cG9zdGdyZXMK
+  POSTGRES_PASSWORD: MTIzNA==
+  POSTGRES_USER: cG9zdGdyZXM=
